[package]
name = "schema"
version = "0.1.0"
authors = ["dbugger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
serde = { version = "1.0.60", features = ["derive"] }
serde_json = "1.0.44"
log4rs = "0.9.0"
